GNOME Bugzilla – Bug 644976
Fix "backspace", "enter", "escape" input.
Last modified: 2011-03-17 00:13:10 UTC
66a77d0bc0cadcf14faeb3d6a5da3a78ae1ab6d1 broke GTK+'s IM stuff. Fix it.
Created attachment 183593 [details] [review] gdkkeyuni: Fix DEL for binary search The list needs to be sorted in order for the binary search to work properly.
Created attachment 183594 [details] [review] Don't only use ch != 0 to check if a character is a control char.
Thanks, both look good to me. Please commit to master and gtk-3-0
Attachment 183593 [details] pushed as 6ecfddf - gdkkeyuni: Fix DEL for binary search Attachment 183594 [details] pushed as ff9eb56 - Don't only use ch != 0 to check if a character is a control char.