gdkkeyuni: Fix DEL for binary search

The list needs to be sorted in order for the binary search to work properly.

https://bugzilla.gnome.org/show_bug.cgi?id=644976